Sofia Park Theatre Festival 1.1

--- a/client/src/components/Favourites/Favourites.module.css
+++ b/client/src/components/Favourites/Favourites.module.css
@@ -17,7 +17,7 @@
     color: #555;
 }
 
-.moviesGrid {
+.playGrid {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -26,7 +26,7 @@
     padding: 20px;
 }
 
-.movieCardWrapper {
+.playCardWrapper {
     position: relative;
     flex-direction: column;
     display: flex;
