--- a/client/src/components/PlayCard/PlayCard.module.css
+++ b/client/src/components/PlayCard/PlayCard.module.css
@@ -5,22 +5,23 @@
   flex-direction: column;
   width: 250px;
   height: 400px;
-  border-radius: 8px;
+  border-radius: 40px 0;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #FFFFFF;
-  transition: transform 0.3s ease;
+  background-color: #1a3300;
+  border: solid 6px #1a3300;
   margin: 0 auto;
   margin-bottom: 10px;
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  border: solid 6px #fdd711;
+  transition: ease-in-out 100ms;
 }
 
 .poster {
   width: 100%;
-  height: 300px;
+  height: 200px;
   object-fit: cover;
 }
 
@@ -35,7 +36,7 @@
 
 .title {
   margin: 0;
-  color: #2d3436;
+  color: #FFFFFF;
   font-size: 2rem;
   font-family: 'Amatic SC', sans-serif;
   font-weight: 700 !important;
