Sofia Park Theatre Festival 1.3

--- a/client/src/components/PlayDetails/PlayDetails.module.css
+++ b/client/src/components/PlayDetails/PlayDetails.module.css
@@ -15,9 +15,10 @@
 }
 
 .poster {
-    max-width: 300px;
+    max-width: 600px;
+    max-height: 600px;
     height: auto;
-    border-radius: 8px;
+    border-radius: 80px 0;
     margin-right: 7%;
 }
 
